# testRepForSynergy

./: CMakeLists.txt  main.cpp
mylib/include/: inout.h
mylib/src/: print.cpp  read.cpp
